[project]
name = "ml-for-factor-investing"
version = "0.1.0"
description = "Practical implementation of the book Machine Learning for Factor Investing"
readme = "README.md"
authors = [
    { name = "Mathieu Chabirand", email = "mathieu.chabirand@gmail.com" }
]
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "ipykernel>=6.31.0",
    "statsmodels>=0.14.5",
    "tabulate>=0.9.0",
    "fredapi>=0.5.2",
    "dotenv>=0.9.9",
    "xgboost>=2.1.4",
    "tensorflow>=2.20.0",
    "plot-keras-history>=1.1.39",
    "keras>=3.10.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["data*", "notebooks*"]
