[project]
name = "ml-for-factor-investing"
version = "0.1.0"
description = "Practical implementation of the book Machine Learning for Factor Investing"
readme = "README.md"
authors = [
    { name = "Mathieu Chabirand", email = "mathieu.chabirand@gmail.com" }
]
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "ipykernel>=6.31.0",
    "statsmodels>=0.14.5",
    "tabulate>=0.9.0",
    "fredapi>=0.5.2",
    "dotenv>=0.9.9",
    "xgboost>=2.1.4",
    "tensorflow>=2.20.0",
    "plot-keras-history>=1.1.39",
    "keras>=3.10.0",
    "arviz>=0.16.0",
    "pymc[jax]>=5.12.0",
    "pytensor>=2.19.0",
    "numpyro>=0.19.0",
    "bartz>=0.7.0",
    "scikit-optimize>=0.10.2",
    "cvxopt>=1.3.2",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["data*", "notebooks*"]
