[project]
name = "ml-for-factor-investing"
version = "0.1.0"
description = "Practical implementation of the book Machine Learning for Factor Investing"
readme = "README.md"
authors = [
    { name = "Mathieu Chabirand", email = "mathieu.chabirand@gmail.com" }
]
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "ipykernel>=6.31.0",
    "statsmodels>=0.14.5",
    "tabulate>=0.9.0",
    "fredapi>=0.5.2",
    "dotenv>=0.9.9",
    "xgboost>=2.1.4",
    "tensorflow>=2.20.0",
    "plot-keras-history>=1.1.39",
    "keras>=3.10.0",
    "arviz>=0.16.0",
    "pymc[jax]>=5.12.0",
    "pytensor>=2.19.0",
    "numpyro>=0.19.0",
    "bartz>=0.7.0",
    "scikit-optimize>=0.10.2",
    "cvxopt>=1.3.2",
    "lime>=0.2.0.1",
    "shap>=0.49.1",
    "tqdm>=4.67.1",
    "dalex>=1.8.0",
    "icpy>=0.0.6",
    "cdt>=0.6.0",
    "networkx>=3.4.2",
    "torch>=2.10.0",
    "causal-learn>=0.1.4.4",
    "causalimpact>=0.2.6",
    "pycausalimpact>=0.1.1",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["data*", "notebooks*"]
